--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,3 +17,13 @@
 .header a:hover{
     color: orange;
 }
+
+.signUp_logout {
+    margin-left: 10px;
+    outline: none;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 6px;
+    background:whtie !important;
+    cursor: pointer;
+}
